--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,10 @@ firebase-debug.*.log*
 .firebase/
 
 # Firebase config
+/public/static/js/firebase-config.js
+
+# VS Code config
+.vscode/
 
 # Uncomment this if you'd like others to create their own Firebase project.
 # For a team working on the same Firebase project(s), it is recommended to leave
