--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ firebase-debug.*.log*
 .firebase/
 
 # Firebase config
-public/static/js/firebase-config.js
+firebase-config.js
 
 # VS Code config
 .vscode/
